--- a/app/src/main/res/layout/activity_edite_ex.xml
+++ b/app/src/main/res/layout/activity_edite_ex.xml
@@ -4,11 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditeEx">
-    <EditText
-        android:layout_width="wrap_content"
+    tools:context=".EditeEx"
+    android:orientation="vertical">
+
+
+    <Button
+        android:id="@+id/btn"
+        android:layout_marginTop="30dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="이름 입력"
+        android:text="Button"
+        android:padding="20dp"
+        android:backgroundTint="@color/black"
         />
+    <ImageView
+        android:id="@+id/img1"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="100dp"
+        android:src="@drawable/v"/>
 
 </LinearLayout>
